--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "pg": "^8.11.0",
-    "sequelize": "^6.32.0"
+    "sequelize": "^6.32.0",
+    "swagger-ui-express": "^4.6.3"
   }
 }
